--- a/Group-5.html
+++ b/Group-5.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ICCT Complaints Management System</title>
-  <link rel="stylesheet" href="https://kit.fontawesome.com/3fea454cc6.css" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/3fea454cc6.js" crossorigin="anonymous"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
     * {
