--- a/Group-5.html
+++ b/Group-5.html
@@ -7,96 +7,118 @@
   <script src="https://kit.fontawesome.com/3fea454cc6.js" crossorigin="anonymous"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-    * {
-      padding: 0;
-      margin: 0;
-      box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
-    }
-    body {
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: rgba(201, 7, 107, 0.8);
-    }
-    .container {
-      position: relative;
-      max-width: 430px;
-      width: 100%;
-      background: #fff;
-      border-radius: 10px;
-      padding: 30px;
-    }
-    .title {
-      font-size: 52px;
-      font-weight: 600;
-      color: rgba(201, 7, 107, 0.8);
-      margin-bottom: 20px;
-    }
-    .title::before {
-      content: '';
-      display: block;
-      height: 3px;
-      width: 37px;
-      background-color: #ccc;
-      border-radius: 25px;
-      margin-bottom: 20px;
-    }
-    .input-field {
-      position: relative;
-      margin-top: 20px;
-    }
-    .input-field input {
-      width: 100%;
-      padding: 15px 35px 15px 15px;
-      border: none;
-      outline: none;
-      border-bottom: 2px solid #ccc;
-      transition: all 0.2s ease;
-    }
-    .input-field input:focus {
-      border-bottom-color: rgba(201, 7, 107, 0.8);
-    }
-    .input-field i {
-      position: absolute;
-      top: 50%;
-      right: 10px;
-      transform: translateY(-50%);
-      color: #999;
-      font-size: 20px;
-      transition: all 0.2s ease;
-    }
-    .input-field input:focus + i {
-      color: rgba(201, 7, 107, 0.8);
-    }
-    .links {
-      margin-top: 5px;
-      font-size: 14px;
-    }
-    .form a {
-      color: rgba(201, 7, 107, 0.8);
-      text-decoration: none;
-      cursor: pointer;
-    }
-    .form a:hover {
-      text-decoration: underline;
-    }
-    .btn {
-      margin-top: 35px;
-      width: 100%;
-      background-color: rgba(201, 7, 107, 0.8);
-      color: #fff;
-      border: none;
-      padding: 15px;
-      font-size: 22px;
-      font-weight: 500;
-      cursor: pointer;
-      border-radius: 6px;
-      transition: all 0.3s ease;
-    }
-    .btn:hover {
-      background-color: rgba(249, 10, 133, 0.8);
+ *{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+  }
+  body{
+   height: 100vh;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   background-color: rgba(201, 7, 107, 0.8);
+  }
+  .container {
+    position: relative;
+    max-width: 430px;
+    width: 100%;
+    background: #fff;
+    border-radius: 10px;
+  }
+  .box{
+    background: #fdfdfd;
+    display: flex;
+    flex-direction: column;
+    padding: 25px 25px;
+    border-radius: 13px;
+    box-shadow: 0 0 128px 0 rgba(0,0,0,0.1), 0 32px 64px -48px rgba(0,0,0,0.5);
+  }
+  .container .form{
+    padding: 30px;
+  }
+  .container .form .title{
+    position: relative;
+    font-size: 52px;
+    font-weight: 600;
+    color: rgba(201, 7, 107, 0.8);
+  }
+  .form .title::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 3px;
+    width: 37px;
+    background-color: #ccc;
+    border-radius: 25px;
+  }
+  .form .input-field{
+    position: relative;
+    height: 50px;
+    width: 100%;
+    margin-top: 30px;
+  }
+  .input-field input{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    padding: 0 35px;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #ccc;
+    border-top: 2px solid transparent;
+    transition: all 0.2s ease;
+  }
+  .input-field input:is(:focus, :valid){
+    border-bottom-color: rgba(0, 0, 0, 0.8);
+  }
+  .input-field i{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    color: #999;
+    font-size: 20px;
+    transition: all 0.2s ease;
+  }
+  .input-field input:is(:focus, :valid) ~ i{
+    color: rgba(0, 0, 0, 0.8);
+  }
+  .links{
+    margin-top: 5px;
+    font-size: 14px;
+  }
+  .form .text{
+    color: #333;
+    font-size: 14px;
+  }
+  .form a{
+    text-decoration: none;
+    cursor: pointer;
+  }
+  .form a:hover{
+    text-decoration: underline;
+  }
+  .form .btn{
+    margin-top: 35px;
+  }
+  .form .btn input{
+    border: none;
+    color: #fff;
+    font-size: 22px;
+    margin-top: 0;
+    font-weight: 500;
+    letter-spacing: 1px;
+    border-radius: 6px;
+    background-color: rgba(201, 7, 107, 0.8);
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  .form .btn input:hover{
+    background-color: rgba(249, 10, 133, 0.8);
+  }
     }
     #complaintForm, #submittedComplaint {
       display: none;
