--- a/Group-5.html
+++ b/Group-5.html
@@ -132,7 +132,7 @@
     <div class="forms">
       <div class="form login">
         <span class="title">Login</span>
-        <form action="#">
+        <form id="loginForm">
           <div class="input-field">
             <input type="text" name="username" id="loginUsername" placeholder="Enter your username" required>
             <i class="fas fa-user"></i>
@@ -151,7 +151,7 @@
       </div>
       <div class="form signup" style="display:none;">
         <span class="title">Signup</span>
-        <form action="#">
+        <form id="signupForm">
           <div class="input-field">
             <input type="text" name="username" id="signupUsername" placeholder="Enter your username" required>
             <i class="fas fa-user"></i>
