--- a/Group-5.html
+++ b/Group-5.html
@@ -167,37 +167,24 @@
 
     }
 
-    .btn {
-
-      margin-top: 35px;
-
-      width: 100%;
-
-      background-color: rgba(201, 7, 107, 0.8);
-
-      color: #fff;
-
-      border: none;
-
-      padding: 15px;
-
-      font-size: 22px;
-
-      font-weight: 500;
-
-      cursor: pointer;
-
-      border-radius: 6px;
-
-      transition: all 0.3s ease;
-
-    }
-
-    .btn:hover {
-
-      background-color: rgba(249, 10, 133, 0.8);
-
-    }    
+    .form .btn{
+    margin-top: 35px;
+  }
+  .form .btn input{
+    border: none;
+    color: #fff;
+    font-size: 22px;
+    margin-top: 0;
+    font-weight: 500;
+    letter-spacing: 1px;
+    border-radius: 6px;
+    background-color: rgba(201, 7, 107, 0.8);
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  .form .btn input:hover{
+    background-color: rgba(249, 10, 133, 0.8);
+  }
     #complaintForm, #submittedComplaint {
       display: none;
       margin-top: 20px;
