--- a/Group-5.html
+++ b/Group-5.html
@@ -113,11 +113,9 @@
 
     }
 
-    .input-field input:focus {
-
-      border-bottom-color: rgba(201, 7, 107, 0.8);
-
-    }
+      .input-field input:is(:focus, :valid){
+    border-bottom-color: rgba(0, 0, 0, 0.8);
+      }
 
     .input-field i {
 
@@ -125,7 +123,7 @@
 
       top: 50%;
 
-      right: 10px;
+      left: 0;
 
       transform: translateY(-50%);
 
@@ -137,9 +135,8 @@
 
     }
 
-    .input-field input:focus + i {
-
-      color: rgba(201, 7, 107, 0.8);
+    .input-field input:is(:focus, :valid) ~ i{
+    color: rgba(0, 0, 0, 0.8);
 
     }
 
@@ -152,8 +149,6 @@
     }
 
     .form a {
-
-      color: rgba(201, 7, 107, 0.8);
 
       text-decoration: none;
 
