--- a/Group-5.html
+++ b/Group-5.html
@@ -43,19 +43,24 @@
 
     }
 
-    .container {
-
-      position: relative;
-
-      max-width: 430px;
-
-      width: 100%;
-
-      background: #fff;
-
-      border-radius: 10px;
-
-    }
+  .container {
+    position: relative;
+    max-width: 430px;
+    width: 100%;
+    background: #fff;
+    border-radius: 10px;
+  }
+  .box{
+    background: #fdfdfd;
+    display: flex;
+    flex-direction: column;
+    padding: 25px 25px;
+    border-radius: 13px;
+    box-shadow: 0 0 128px 0 rgba(0,0,0,0.1), 0 32px 64px -48px rgba(0,0,0,0.5);
+  }
+  .container .form{
+    padding: 30px;
+  }
 
     .title {
 
