--- a/Group-5.html
+++ b/Group-5.html
@@ -188,11 +188,12 @@
 
 <body>
 
+  <h2>Welcome to ICCT Complaints Management System</h2>
 
+</nav>
   
   <div class="container">
     
-    <h2>Welcome to ICCT Complaints Management System</h2>
 
     <div class="forms">
 
